--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,18 @@ hr {
 #team,
 #portfolio,
 #pricing,
+#Beneficiaries,
+#chart,
+#chart-0,
+#necessary,
 #contact {
   padding-top: 100px;
   padding-bottom: 100px;
+}
+#Beneficiaries,
+#chart {
+  background: #3b3b3b;
+  color: #ffffff;
 }
 
 /* ==========================================================================
@@ -374,10 +383,6 @@ work section
 /* ==========================================================================
 about section
 ========================================================================== */
-#about {
-  background: #3b3b3b;
-  color: #ffffff;
-}
 .nav-tabs {
   margin-top: 20px;
   border-bottom: 1px solid #606060;
