--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,17 @@ hr {
 #Beneficiaries,
 #chart,
 #chart-0,
+#classdiagram
 #necessary,
+#chart-seq,
 #contact {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+#chart-seq .col-md-6{
+  padding-top:25px ;
+}
+#chart-seq,
 #Beneficiaries,
 #chart {
   background: #3b3b3b;
